# EraBackend

./: .env  Cargo.toml  Procfile
resources/: cosmetics.json  fortnite-game.json  keychain.json  shops.json
resources/cloudstorage/: DefaultGame.ini  DefaultRuntimeOptions.ini
resources/public/: index.html  script.js  style.css
src/: files.rs  main.rs  utils.rs
src/api/: account.rs  cloudstorage.rs  content.rs  fortnite.rs  id.rs  lightswitch.rs  mod.rs  other.rs  profile.rs
src/structs/: account.rs  app.rs  cloudstorage.rs  discord.rs  error.rs  mod.rs  profile.rs
utils/: cosmetics.py
