[package]
name = "era-backend"
version = "0.1.0"
authors = ["Kyiro <github.com/Kyiro>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
base64 = "0.13.0"
chrono = "0.4"
dotenv = "0.15.0"
log = "0.4"
mongodb = "2.0.0-beta.3"
nanoid = "0.4.0"
pretty_env_logger = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"] }